# fastapi-hexagonal-example

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.monolith  Dockerfile.posts  LICENSE  README.md  docker-compose.monolith.yml  docker-compose.services.yml  docker-compose.yml  main.py  microservice.md  posts_main.py  pyproject.toml
scripts/: lint_architecture.py
src/app/composition/: __init__.py  app_factory.py  gateways.py
src/posts/: Dockerfile  main.py
src/posts/application/ports/: post_repository.py  user_gateway.py
src/posts/application/use_cases/: __init__.py  create_post.py  delete_post.py  delete_user_posts.py  get_post.py  get_posts_by_user.py  list_user_posts.py
src/posts/domain/: eligibility.py  exceptions.py  post.py  user_snapshot.py
src/posts/infrastructure/: factory.py
src/posts/infrastructure/http/: factory.py  http_user_gateway.py  internal_router.py  post_repository_gateway.py  requests.py  responses.py  router.py
src/posts/infrastructure/persistence/: local_user_gateway.py  orm.py  repository.py
src/shared/: Dockerfile  main.py
src/shared/application/ports/: unit_of_work.py
src/shared/domain/: base_exception.py
src/shared/infrastructure/: db.py  settings.py
src/shared/infrastructure/http/: __init__.py  client.py  context.py  dependencies.py  factory.py  internal_auth.py
src/shared/infrastructure/persistence/: orm.py  (+1 more)
src/users/: Dockerfile  main.py
src/users/domain/: exceptions.py  post_snapshot.py  user.py
src/users/infrastructure/: factory.py
tests/: conftest.py  test_internal_routes.py  test_main.py
tests/infrastructure/http/: test_internal_auth.py
tests/posts/: doubles.py
tests/posts/domain/: test_post.py  test_posts_exceptions.py
tests/shared/application/: test_unit_of_work.py
tests/shared/domain/: test_base_exception.py
tests/shared/infrastructure/: test_db.py  test_settings.py
tests/users/: doubles.py
tests/users/domain/: test_exceptions.py  test_user.py
(+49 files in other folders)
